--- a/web/resources/style.css
+++ b/web/resources/style.css
@@ -20,6 +20,30 @@ p {
     text-align: center;
 }
 
+#slide1 {
+    margin: 0;
+}
+
+.full-slide input {
+    display: none;
+}
+
+.full-slide .ui-slider-track {
+    margin-left: 15px;
+}
+
+.left {
+    width: 25%;
+    float: left;
+    text-align: left
+}
+
+.right {
+    float: right;
+    width: 23%;
+    text-align: right;
+}
+
 @media screen and (min-width: 1100px) {
     .btnSize {
         margin-left: 40%;
