baseline bug fixes and survey 2/3 initial

--- a/web/resources/style.css
+++ b/web/resources/style.css
@@ -10,6 +10,17 @@ p {
     text-align: center;
 }
 
+.ui-progressbar {
+    position: relative;
+}
+.progress-label {
+    position: absolute;
+    left: 50%;
+    top: 4px;
+    font-weight: bold;
+    text-shadow: 1px 1px 0 #fff;
+}
+
 #hm1 {
     width: 50%;
     padding-left: 25%;
