--- a/web/resources/style.css
+++ b/web/resources/style.css
@@ -91,7 +91,7 @@ p {
 #q60Btn, #q61Btn, #q62Btn, #q63Btn, #q64Btn,#bInst5Btn,#q69Btn, #q70Btn, #q74Btn, #bInst5Btn, #bInst6Btn, #bInst6_1Btn, #bInst7Btn,
 #bInst8Btn, #bInst9Btn, #bInst10Btn, #bInst11Btn, #bInst12Btn, #bInst13Btn, #s3FinBtn, #s4FinBtn, #s5FinBtn, #s6FinBtn, #s7FinBtn, #s8FinBtn, #s9FinBtn,
 #s10FinBtn, #s11FinBtn, #s12FinBtn, #s13FinBtn, #q48Btn, #q49Btn, #q50Btn, #q51Btn, #q53Btn, #q54Btn, #q55Btn, #q56Btn, #q224Btn, #q225Btn, #q226Btn
-, #q227Btn, #q228Btn, #q229Btn, #q230Btn, #q231Btn, #q232Btn, #q233Btn, #q234Btn, #q235Btn, #q236Btn, #q237Btn, #q238Btn, #finBtn {
+, #q227Btn, #q228Btn, #q229Btn, #q230Btn, #q231Btn, #q232Btn, #q233Btn, #q234Btn, #q235Btn, #q236Btn, #q237Btn, #q238Btn, #finBtn, #reBtn {
     font-size: 15px;
     background-color: rgba(0, 108, 250, 1);
     color: white;
